ref errors fixed (chkpt)

--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1395.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.3",
     "firebase": "^9.22.0",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-facebook-login": "^4.1.1",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-html-parser": "^2.0.2",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^8.1.1",
     "react-resizable": "^3.0.5",
     "react-router-hash-link": "^2.4.3",
