--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
