--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^8.1.1",
     "react-resizable": "^3.0.5",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.26.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
