--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
     "firebase": "^9.22.0",
+    "hex-to-rgba": "^2.0.1",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
