--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
+    "react-country-state-city": "^1.1.3",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-facebook-login": "^4.1.1",
